--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -400,7 +400,7 @@
                         </div>
                         
                         <div class="d-grid">
-                            <a href="{{ url_for('referrals') if 'referrals' in url_for.__globals__ else '#' }}" class="btn btn-outline-danger btn-sm">
+                            <a href="{{ url_for('referral_system') }}" class="btn btn-outline-danger btn-sm">
                                 <i class="fas fa-fire me-1"></i>Join Challenge
                             </a>
                         </div>
@@ -603,7 +603,7 @@
                     <small><i class="fas fa-exclamation-triangle me-2"></i>Challenge valid till 20th December</small>
                 </div>
                 <div class="d-grid">
-                    <a href="{{ url_for('referrals') if 'referrals' in url_for.__globals__ else '#' }}" class="btn btn-danger">Join Challenge Now</a>
+                    <a href="{{ url_for('referral_system') }}" class="btn btn-danger">Join Challenge Now</a>
                 </div>
             </div>
         </div>
